cli/tests/snapshots/cli__run_images@triangle_asa1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/triangle_asa1.py
---
<svg width="197.0" height="35.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 167.81992623545597 0.0 L 196.9615506024416 34.729635533386066 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
