cli/tests/snapshots/cli__run_images@triangle_saa1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/triangle_saa1.py
---
<svg width="99.0" height="18.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 14.570812183492805 0.0 L 98.48077530122079 0.0 L 0.0 17.364817766693033 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
