cli/tests/snapshots/cli__run_images@triangle_sas1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/triangle_sas1.py
---
<svg width="100" height="11" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0 0 L 100 0 L 40.911535 10.418891 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
