cli/tests/snapshots/cli__run_images@triangle_ssa1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/triangle_ssa1.py
---
<svg width="97" height="25" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0 0 L 42.217378 0 L 96.90686 24.679152 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
