cli/tests/snapshots/cli__run_images@triangle_sss1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/triangle_sss1.py
---
<svg width="80" height="30" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0 0 L 80 0 L 52.5 29.047375 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
