cli/tests/snapshots/cli__run_images@underlay2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/underlay2.py
---
<svg width="60" height="60" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <g>
          <g>
            <g>
              <path d=" Z" />
              <path d="M 35 30 A 5 30 0 0 1 25 30 A 5 30 0 0 1 35 30 Z" fill="rgba(255, 0, 0, 1.0)" />
            </g>
            <path d="M 40 30 A 10 25 0 0 1 20 30 A 10 25 0 0 1 40 30 Z" fill="rgba(0, 0, 0, 1.0)" />
          </g>
          <path d="M 45 30 A 15 20 0 0 1 15 30 A 15 20 0 0 1 45 30 Z" fill="rgba(255, 0, 0, 1.0)" />
        </g>
        <path d="M 50 30 A 20 15 0 0 1 10 30 A 20 15 0 0 1 50 30 Z" fill="rgba(0, 0, 0, 1.0)" />
      </g>
      <path d="M 55 30 A 25 10 0 0 1 5 30 A 25 10 0 0 1 55 30 Z" fill="rgba(255, 0, 0, 1.0)" />
    </g>
    <path d="M 60 30 A 30 5 0 0 1 0 30 A 30 5 0 0 1 60 30 Z" fill="rgba(0, 0, 0, 1.0)" />
  </g>
</svg>
