cli/tests/snapshots/cli__run_images@underlay_align2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/underlay_align2.py
---
<svg width="50.0" height="50.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <path d="M 0.0 0.0 L 50.0 0.0 L 50.0 50.0 L 0.0 50.0 Z" fill="rgba(46, 139, 87, 1.0)" />
        <path d="M 10.0 0.0 L 50.0 0.0 L 50.0 40.0 L 10.0 40.0 Z" fill="rgba(192, 192, 192, 1.0)" />
      </g>
      <path d="M 20.0 0.0 L 50.0 0.0 L 50.0 30.0 L 20.0 30.0 Z" fill="rgba(46, 139, 87, 1.0)" />
    </g>
    <path d="M 30.0 0.0 L 50.0 0.0 L 50.0 20.0 L 30.0 20.0 Z" fill="rgba(192, 192, 192, 1.0)" />
  </g>
</svg>
